shortened paper to fit length requirement

--- a/usenixatc/background.tex
+++ b/usenixatc/background.tex
@@ -101,14 +101,11 @@ some of these cases, which point to a key problem that CDNs face: by knowing
 all the content that they distribute, CDNs may be burdened with the legal
 responsibility for the actions of their customers and clients.
 
-\textbf{User Data Requests.}
-There are numerous open questions in the legal realm regarding which government can request data stored in different countries, which 
-has led to much uncertainty.  A series of recent events have illustrated this uncertainty.  In the struggle over government access to 
-user data, cases such as {\it Microsoft vs. United States} (often known as the ``Microsoft Ireland Case'') concerns whether the United 
-States Government should have access to data about U.S. citizens stored abroad, given that Microsoft is a U.S. corporation.  
-
-Additionally, third parties have asked CDNs for user data.  The Cloudflare CDN has
-been required
+%There are numerous open questions in the legal realm regarding which government can request data stored in different countries, which 
+%has led to much uncertainty.  A series of recent events have illustrated this uncertainty.  In the struggle over government access to 
+%user data, cases such as {\it Microsoft vs. United States} (often known as the ``Microsoft Ireland Case'') concerns whether the United 
+%States Government should have access to data about U.S. citizens stored abroad, given that Microsoft is a U.S. corporation.  
+\textbf{User Data Requests.} Third parties have asked CDNs for user data.  The Cloudflare CDN has been required
 to share data with FBI~\cite{cloudflare_nsl}; similarly, leaked NSA documents showed
 that the government agency ``collected information `by exploiting inherent 
 weaknesses in Facebook's security model' through its use of the popular Akamai content
