--- a/usenixatc/design.tex
+++ b/usenixatc/design.tex
@@ -53,10 +53,10 @@ content that it is caching.  Therefore, the content {\it and} the associated URL
 must be obfuscated
 before the CDN sees them.  The content can be obfuscated by encrypting it with a
 key that is not
-known to the CDN.  Because this must be done prior to any caching, the content publisher must 
+known to the CDN.  Because this must be done prior to caching, the content publisher must 
 generate a shared key $k$ to encrypt the content with. Encrypting the content alone does not 
 hide all information about content from the CDN; the content identifier, or URL, must also be obfuscated, otherwise the 
-CDN can still reveal information about which clients accessed which URLs (which is indicative 
+CDN can reveal information about which clients accessed which URLs (which is indicative 
 of the content).  The obfuscated URL should be fixed and relatively
 small; 
 these requirements reduce storage requirements and prevent the adversary from guessing
