--- a/usenixatc/performance.tex
+++ b/usenixatc/performance.tex
@@ -27,9 +27,8 @@
 \section{Performance Evaluation}
 \label{sec:performance}
 We evaluate the performance 
-of \system{}.  In addition to understanding the latency and overhead produced by the 
-system, we also discuss the scalability of the design and show how \system{} scales 
-well with an increasing number of clients.
+of \system{} for latency and overhead, as well as scalability.  %In addition to %understanding the latency and overhead produced by the 
+%system, we also discuss the scalability of the design and show how \system{} scales with %an increasing number of clients.
 
 \subsection{Throughput and Latency Overhead}
 For measuring performance characteristics of \system{}, we use the implementation 
@@ -37,11 +36,8 @@ described in Section \ref{sec:implementation}.  Figure \ref{fig:impl} shows
 how our measurements reflect \system{} (solid line) and a traditional CDN (dotted 
 line).  
 
-Figure~\ref{fig:completion} shows the time to first byte (TTFB) and the time for
-both \system{} and 
-without \system{}.  We can see the the TTFB using \system{} increases linearly with
-file size, whereas without \system{} TTFB remains fairly constant.  Interestingly, 
-we can see that there are some fixed-time operations that \system{} performs, which
+Figure~\ref{fig:completion} shows the time to first byte (TTFB).  We can see the the TTFB using \system{} increases linearly with
+file size, whereas without \system{} TTFB remains fairly constant.  We can see that there are some fixed-time operations that \system{} performs, which
 is visible by looking at the smaller file sizes. Completion time increases linearly
 with file size, but for both \system{} and without \system{}; while both follow the
 same pattern, the time to complete requests is, as expected, longer using \system{} as it performs many cryptographic operations and proxies traffic between the client and the CDN.
@@ -79,8 +75,9 @@ increases more quickly than TTFB as the file size and latency increase.
 %\end{figure}
 
 Finally, we measure the performance overhead of the individual operations used in
-\system{}; figure \ref{fig:overhead2} shows
-the overhead of different components of the system for three different file sizes.  We can see that some of the fixed cost/time 
+\system{}; this is shown in Figure \ref{fig:overhead2}. %shows
+%the overhead of different components of the system for three different file sizes.  
+We can see that some of the fixed cost/time 
 operations include the client locally looking up the correct exit proxy to use for a given URL and the exit proxy generating the 
 HMAC$_{k}$(URL).  The operations that have the most overhead and continue to grow with the size of the file are the exit proxy decrypting 
 the response with the shared key $k$, the exit proxy encrypting the response with the session key $k_{session}$, and the client 
@@ -96,10 +93,10 @@ decrypting the response with the session key $k_{session}$.
 \subsection{Scaling with Users and Content}
 \label{sec:scalability}
 
-For evaluating performance, we are also concerned with how well \system{} will scale with more users 
-and more URLs.  In particular, we need to reason about how much load is put on the exit proxies as the 
-system increases; clients do not bare much load in the system as they simply proxy
-requests and the CDN is designed
+%For evaluating performance, we are also concerned with how \system{} will scale with more users 
+%and more URLs.  In particular, w
+We need to reason about how much load is put on the exit proxies as the 
+system increases; clients do not bare much load in the system and the CDN is designed
 to handle high numbers of requests, therefore, we limit our scalability analysis to the exit proxies.  
 
 As previously mentioned, we balance load among the proxies by using consistent hashing to assign URLs to 
@@ -107,7 +104,6 @@ exit proxies.  \system{} can additionally distribute load by replicating exit pr
 have the same distributed hash table of shared keys.  This way, both exit proxies can accept requests from clients for 
 the URLs they are responsible for.  Also worth noting is that the exit proxy is only receiving requests for the content 
 corresponding to the shared keys it contains.  Therefore, as the number of clients grow, the exit proxy is still only responsible 
-for its set of shared keys and subsequent URLs.  And as the number of URLs increase, the additional load per proxy is 
-still low because of the load balancing properties of consistent hashing.  %We also discuss in Section \ref{sec:discussion} how 
+for its set of shared keys/subsequent URLs.  And as the number of URLs increase, the additional load per proxy is low because of the load balancing properties of consistent hashing.  %We also discuss in Section \ref{sec:discussion} how 
 %clients can set up exit proxies; this will further decrease the load per exit proxy because each exit proxy will be responsible 
 %for a smaller number of shared keys/URLs.
