--- a/usenixatc/security.tex
+++ b/usenixatc/security.tex
@@ -26,8 +26,7 @@ systems.
 \label{tab:sec_table}
 \end{table}
 
-\textbf{Popularity Attacks.}  An attacker that has requested or otherwise 
-gained access to CDN cache logs can learn information about how often 
+\textbf{Popularity Attacks.}  An attacker who has gained access to CDN cache logs can learn information about how often 
 content was requested.  Because not all content is requested uniformly, the 
 attacker could potentially correlate the most commonly requested content with 
 very popular webpages.  While this does not allow the CDN to learn which 
@@ -40,19 +39,19 @@ copies of their content.  All of the content copies are pushed to the CDN and th
 shared with the exit proxy.\footnote{This also provides load balancing for exit proxies 
 that hold the shared key $k$ for the popular webpage because it distributes the load
 across multiple exit proxies (where each of these exit proxies are responsible for 
-one of the encodings).}  Now, the popular content does not appear as popular, 
-and it makes it difficult for an attacker to infer the popularity of the content.
+one of the encodings).}  %Now, the popular content does not appear as popular, 
+%and it makes it difficult for an attacker to infer the popularity of the content.
 
-\textbf{Chosen Plaintext Attacks.} An attacker could attempt to
+\textbf{Chosen Plaintext Attacks.} An attacker can attempt to
 determine whether a particular URL was being accessed by sending requests
 through specific \system{} proxies and requesting access to the CDN cache logs, 
 which contain the corresponding obfuscated
 requests and responses. Blinding the clients' requests
-with a random nonce that is added by the proxy should prevent against this
-attack. We also believe that such an attack reflects a stronger attack: from a
-law enforcement perspective, receiving a subpoena for {\em existing} logs and
-data may present a lower legal barrier than compelling a CDN to attack a
-system.
+with a random nonce that is added by the proxy prevents against this
+attack. %We also believe that such an attack reflects a stronger attack: from a
+%law enforcement perspective, receiving a subpoena for {\em existing} logs and
+%data may present a lower legal barrier than compelling a CDN to attack a
+%system.
 
 \textbf{Traffic Analysis Attacks.} If a CDN itself is malicious and is attempting 
 to learn information about the content and/or clients, the CDN may act as a client 
@@ -69,18 +68,17 @@ also been numerous studies that have proposed and evaluated defenses against tra
 analysis attacks~\cite{wright2009traffic,rackoff1993cryptographic}; \system{} could implement one of these solutions (such as slight timing delays) at the exit 
 proxy.
 
-\textbf{Spoofed Content Updates.} Because the CDN cache
-nodes do not know either the content that they are hosting or the URLs
+\textbf{Spoofed Content Updates.} Because the CDN does not know either the content that it is hosting or the URLs
 corresponding to the content, an attacker could masquerade as an origin server
 and could potentially push bogus content for a URL to a cache node. There are
 a number of defenses against this possible attack. The simplest solution is
 for CDN cache nodes to authenticate origin servers and only accept updates
 from trusted origins; this approach is plausible, since many origin servers already
-have a corresponding public key certificate through the web PKI hierarchy.  An additional
-defense is to make it difficult for an attacker to discover which obfuscated URLs correspond
-to which content that an attacker wishes to spoof; this is achievable by design.
-A third defense would be to only accept updates for content from the same origin
-server that populated the cache with the original content.
+have a corresponding public key certificate through the web PKI hierarchy.  %An additional
+%defense is to make it difficult for an attacker to discover which obfuscated URLs correspond
+%to which content that an attacker wishes to spoof; this is achievable by design.
+%A third defense would be to only accept updates for content from the same origin
+%server that populated the cache with the original content.
 
 \textbf{Timing Attacks.} An attacker who is passively observing traffic could potentially 
 correlate requests and responses based on timing information.  To address this type of attack, 
