2019 atc style file

--- a/usenixatc/main.tex
+++ b/usenixatc/main.tex
@@ -1,6 +1,8 @@
 %\documentclass[sigconf]{acmart}
 \documentclass[letterpaper,twocolumn,10pt]{article}
-\usepackage{usenix2019,epsfig,endnotes}
+%\usepackage{usenix2019,epsfig,endnotes}
+
+\usepackage{usenix2019_v3}
 
 \usepackage[utf8]{inputenc}%(only for the pdftex engine)
 %\RequirePackage[no-math]{fontspec}%(only for the luatex or the xetex engine)
