format checker fix

--- a/usenixatc/implementation.tex
+++ b/usenixatc/implementation.tex
@@ -19,7 +19,7 @@ and the exit proxy; we simulate additional clients on this path by increasing $\
 \label{fig:impl}
 \end{figure}
 \begin{figure*}[t!]
-\vspace{-2mm}
+%\vspace{-2mm}
   \begin{minipage}[t]{.31\linewidth}
     \centering
      \includegraphics[trim={10 15 10 12},clip,width=\textwidth]{combined}
