--- a/esorics/main.tex
+++ b/esorics/main.tex
@@ -80,7 +80,7 @@
 \input{implementation}
 \input{performance}
 \input{security}
-\input{discussion}
+%\input{discussion}
 \input{related_work}
 \input{conclusion}
 
