--- a/esorics/security.tex
+++ b/esorics/security.tex
@@ -11,9 +11,9 @@ systems.
 \centering
 \begin{tabular}{| l | c | c | c |} 
 \hline
- {} & Preserves  & Protects & Preserves \\ 
- {} & Integrity & Client & Confidentiality \\
- {} & at CDN & Identity & at CDN \\
+ {} & ~Preserves Integrity~  & ~Protects Identity~ & ~Preserves Confidentiality~ \\ 
+% {} & Integrity & Client & Confidentiality \\
+% {} & at CDN & Identity & at CDN \\
 \hline
  Stickler~\cite{levy2015stickler} & \checkmark & {} & {}\\ 
  R \& C~\cite{michalakis2007ensuring} & \checkmark & {} & {}\\
