--- a/esorics/related_work.tex
+++ b/esorics/related_work.tex
@@ -28,16 +28,13 @@ or publishers; \system{} is complementary to Stickler.
 %service.\\
 
 \textbf{Security Issues in CDNs.} More prevalent in the literature than defense are attacks on CDNs.  Liang et al., studied 
-20 CDN providers and found that there are many problems with HTTPS practice in CDNs~\cite{liang2014https}.  Some of these 
-problems include: invalid certificates, private key sharing, neglected revocation of stale certificates, and 
-insecure back-end communications; the authors point out that some of these problems are fundamental issues due to 
+20 CDN providers and found that there are many problems with HTTPS practice in CDNs~\cite{liang2014https}.  Including invalid certificates, private key sharing, neglected revocation of stale certificates, and insecure back-end communications; the authors point out that some of these problems are fundamental issues due to 
 the man-in-the-middle characteristic of CDNs.  %Similarly, Zolfaghari and Houmansadr found problems with HTTPS usage by 
 %CDNBrowsing, a system that relies on CDNs for censorship circumvention~\cite{zolfaghari2016practical}.  They found that HTTPS 
 %leaks the identity of the content being accessed, which defeats the purpose of a censorship circumvention tool. 
 Jung et al., show 
-that some CDNs might not actually provide much defense against flash events~\cite{jung2002flash}.  Recently, researchers have studied the privacy implications of peer-assisted CDNs; peer-assisted CDNs allow clients to cache and distribute 
-content on behalf of a website.  It is starting to be supported by CDNs, such as Akamai, but the design of the paradigm
-makes clients susceptible to privacy attacks; one client can infer the cross site browsing patterns of another client~\cite{jia2016anonymity}.
+that some CDNs might not actually provide defense against flash events~\cite{jung2002flash}.  Recently, researchers have studied the privacy implications of peer-assisted CDNs; peer-assisted CDNs allow clients to cache and distribute 
+content on behalf of a website.  It is starting to be supported by CDNs, such as Akamai, but the design makes clients susceptible to privacy attacks; one client can infer the cross site browsing patterns of another client~\cite{jia2016anonymity}.
 
 %Research has also covered other attacks on CDNs; Jung et al., show 
 %that some CDNs might not actually provide much defense against flash events~\cite{jung2002flash}. Su and Kuzmanovic show that some CDNs are more susceptible to intential service 
